public/css/invoices/invoice_table_pdf.css
@page {
    margin: 100px 40px;
}
#watermark {
    display: block;
    position: fixed;
    left: 100px;
    transform: rotate(-45deg);
    transform-origin: 50% 50%;
    opacity: .5;
    font-size: 100px;
    color: #d9d9d9;
    width: 480px;
    text-align: center;
}
br {
    display: block;
    margin: 10px;
}
table {
    width: 100%;
    border-collapse: collapse;
}
thead {
    border-bottom: 2px solid black;
    border-top: 2px solid black;
}
table.totals {
    width: auto;
    max-width: 30%;
    float: right;
    /* border: grey solid; */
}
table.totals > thead {
    background: tomato;
    border-bottom: none;
}
table.totals > tbody {
    background: orange;
}
table.totals td {
	padding: 5px;
	font-size: 14;
	text-align: right;
}
.bill_list td {
    border-left: 1px solid grey;
    border-right: 1px solid grey;
    border-bottom: 1px solid grey;
    font-size: 10px;
}
.bill_list tr:nth-child(even) {
	background: #d6e0f5;
}
.left {
    float: left;
}
.center {
    text-align: center;
}
.right, td.amount {
	text-align: right;
}
.bill_list tr.subtotal {
    margin-left: auto;
    margin-right: auto;
    width: auto;
    min-width: 30%;
    background: white;
}
.subtotal td {
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
}
.subtotal td.right {
    border-bottom: 2px solid black;
}
.subtotal td:first-child {
    border: none;
}
.text-left {
    padding-left: 5%;
    text-align:left;
}
.text-right {
    padding-right: 5%;
    text-align:right;
}
td.basic, td.warn {
    border: grey solid;
    text-align: center;
    margin-bottom: 5px;
    width: 20%;
}
td.basic {
    background: #ADD8E6;
}
td.warn {
    background: orange;
}
.header {
    position: fixed;
    top: -90px;
}

.footer {
    bottom: -15px;
    position: fixed;
    font-size: 10;
}
.footer .pagenum:before {
    content: counter(page);
}
table.unpaid_invoices {
    width: 60%;
    float: left;
}

